# psychology-test-platform

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_AND_PLAN.md  CLAUDE.md  README.md  docker-compose.yml  garage.toml
app/: Dockerfile  alembic.ini  celery_app.py  config.py  db.py  deps.py  entrypoint.sh  main.py  manage.py  redis_client.py  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 0001_initial.py  0002_identity.py  0003_username_unique.py  0004_wpsync.py
app/core/: errors.py  templating.py
app/modules/catalog/: models.py  seed.py  service.py
app/templates/: attempt.html  base.html  error.html  result.html  start.html
engine/: Dockerfile  ENGINE.md  pyproject.toml
engine/engine/: __init__.py  app.py  contracts.py  registry.py  scoring.py
engine/engine/instruments/: __init__.py  base.py
engine/engine/instruments/mmpi/: __init__.py  mmpi_v1.json  plugin.py
engine/engine/instruments/wellbeing/: __init__.py  plugin.py
engine/tests/: conftest.py  test_api.py  test_equivalence.py  test_mmpi_plugin.py  test_registry.py  test_scoring.py  test_wellbeing_plugin.py
nginx/: nginx.conf
tests/: conftest.py  test_admin_seed.py  test_auth_password_routes.py  test_auth_routes.py  test_definition.py  test_equivalence.py  test_identity_flow.py  test_interpret.py  test_otp.py  test_password_login.py  test_password_recovery.py  test_passwords.py  test_ratelimit.py  test_scoring.py  test_sessions.py  test_wpsync.py  test_wpsync_client.py  test_wpsync_routes.py
tests/fixtures/: mmpi_original.html
wordpress/mu-plugins/: pst-sync.php
(+41 files in other folders)
